Fix #3. Bookmarks menu expanding off screen.

--- a/styles/master.styl
+++ b/styles/master.styl
@@ -369,6 +369,8 @@ select
     display none
     float left
     min-width 160px
+    max-height 400px
+    overflow-y auto
     padding 5px 0
     margin 2px 0 0
     list-style none
